# Gov_Reg

./: .gitignore  01260207201000000116_COUNTER_STORE.json  01260207201000000190_transition_contract.bundle.yaml  AGENTS.md  AUDIT_SUMMARY_AND_EXECUTION_PLAN.md  Applying CDD File Reuse to the NPP System.md  CCD_ABS.txt  CLAUDE.md  ChatGPT-Column Header Pros Cons (1).md  ChatGPT-Registry Explanation.md  ChatGPT-Reusable Governance Components.json  ChatGPT-Timestamp Clustering for Mapping (1).md  FILE_MANIFEST_CONSISTENCY_REVIEW.md  FILE_MANIFEST_SPECIFICATION_V1.md  FOUND_CLEANUP_SCRIPTS.md  GIT_FILES_INVENTORY.md  HIGH_PRIORITY_FIXES_APPLIED.md  LangGraph CLI for Loops.docx  NEWPHASEPLANPROCESS_AUTONOMOUS_DELIVERY_TEMPLATE_V3_2.json  NEWPHASEPLANPROCESS_INSTRUCTION_DOCUMENT_V3_2.json  NEWPHASEPLANPROCESS_TECHNICAL_SPECIFICATION_V3_2.json  PATH-ABSTRACTION-455__SSOT-UET-PATH-ABSTRACTION.md  P_01999000042260125106_FILE_MANIFEST.md  Project Knowledge Automation.docx  README_PLANNING_LOOP.md  README_PUSH_TO_GITHUB.md  SSOT-UET-PATH-ABSTRACTION.MD  Target end-state (combined system).txt  UNIFIED_SOLUTION_MANIFEST.md  analyze_inconsistencies.py  analyzer_interface.py  automation____SSOT-UET-PATH-ABSTRACTION.md.json  baseline_planning_policy.json  concurrent-marinating-hippo.md  consolidated_runner.py  dir_clean_up_plan.json  dir_clean_up_plan_v1.2.0.json  file_manifest_config.yaml  file_manifest_schema_v1.json  greedy-floating-forest.md  (+18 more)
01260207201000001250_REGISTRY/: .dir_id  .gitignore  00_REGISTRY_FOLDER_MANIFEST.md  01260202173939000109_CLAUDE.md  B1_IMPLEMENTATION_GUIDE.txt  (+61 more)
(+3693 files in other folders)
